--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,1 +1,105 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+
+
+.photo-card:not(:last-child) {
+    margin-right: 10px;
+}
+
+.is-hidden {
+position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+}
+
+
+.search-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: purple;
+    padding: 10px;
+    margin-bottom: 20px;
+    
+}
+
+.search-form > input {
+    border-radius: 10px;
+}
+
+.info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // flex-wrap: wrap;
+}
+
+.info-item {
+    display: flex;
+    flex-direction: column;
+    margin-right: 10px;
+    justify-content: center;
+    align-items: center;
+        
+}
+
+span {
+    font-weight: 400;
+}
+
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+
+    // max-width: 1140px;
+
+    
+    // max-width: 1140px;
+    // grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+    // grid-auto-rows: 240px;
+    // grid-gap: 12px;
+
+    // justify-content: center;
+    // margin-bottom: 20px;
+}
+
+.photo-card {
+    width: 320px;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 10px;
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
+            0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+}
+
+
+
+.gallery__image {
+    display: block;
+    height: 100%;
+    max-width: 100%;
+    object-fit: cover;
+    // transition: transform var(--animation-duration) var(--timing-function);
+}
+
+// .gallery__image:hover {
+//     transform: scale(1.03);
+// }
+.gallery__link {
+    display: block;
+    flex-grow: 1;
+    // text-decoration: none;
+    // height: 100%;
+}
+
+.gallery__link:hover {
+    cursor: pointer;
+}
