--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -72,14 +72,13 @@ span {
 }
 
 .photo-card {
-    width: 320px;
+    max-width: 320px;
     display: flex;
     flex-direction: column;
     padding-bottom: 10px;
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
             0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
 }
-
 
 
 .gallery__image {
