--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -18,8 +18,16 @@ position: absolute;
     margin: -1px;
 }
 
-
+body {
+    position: relative;
+    width: 100%;
+    padding-top: 90px;
+}
 .search-container {
+    position: fixed;
+    top: 0;
+    width: 100%;
+
     display: flex;
     align-items: center;
     justify-content: center;
@@ -30,6 +38,7 @@ position: absolute;
 }
 
 .search-form > input {
+    
     border-radius: 10px;
 }
 
